# idea-hackathon

./: .dockerignore  .gitignore  Dockerfile  README.md  render.yaml  zh_sites.db
ai_engine/: .env.example
ai_engine/server/: __init__.py  inference_pipeline.py  main.py  mapping.py  requirements.txt  run.py  scan_sim.py
ai_engine/server/chat/: __init__.py  router.py
ai_engine/server/ingest/: __init__.py  aggregator.py  buffer.py  parsers.py  runner.py  site_state.py  sources.py  ws_hub.py
ai_engine/server/llm/: __init__.py  client.py  promptmaker.py
ai_engine/server/sites/: __init__.py  db.py  models.py  router.py
ai_engine/train/: DATA.md  data.ipynb
ai_engine/train/models/: README.md  inference.py
design/: FRONTEND_MIGRATION_BRIEF.md  README.md  blast-radius.md  command-center.md  components.md  endpoint-detail.md  identity.md  inventory.md  landscape-graph.md  motion.md  states.md  tailwind.tokens.js  tokens.css  typography.md
docs/: ARCHITECTURE.md  PIPELINE.md  PROBLEM_STATEMENT.md  prevproj.md  ps-understanding-2.md  whatIamThinking.md
docs/demo/: synthetic-bank-logs.jsonl
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/api/: client.ts  endpoints.ts  fixtures.ts  sitesApi.ts  websocket.ts
frontend/src/hooks/: useEndpointDetail.ts  useEndpoints.ts  useGraph.ts  useScan.ts  useSiteFeed.ts  useSummary.ts  useWebSocket.ts
frontend/src/lib/: format.ts
frontend/src/pages/: BoreholeDetail.tsx  Boreholes.tsx  CommandCenter.tsx  Inventory.tsx  Landscape.tsx  Reports.tsx  ReviewQueue.tsx
frontend/src/store/: liveStore.ts  uiStore.ts
pipe/backend/: Cargo.toml  config.toml
pipe/backend/src/: cfg.rs  error.rs  log.rs  loop_runner.rs  main.rs  metrics.rs  owasp.rs  predictions.rs  process_batch.rs  promptmaker.py  python_promptmaker.rs  reports.rs  routes.rs  rule_classifier.rs  scan.rs  scan_runner.rs  slm_bridge.py  slm_runtime.rs  state.rs  unified.rs  ws.rs
pipe/data/: Cargo.toml
pipe/data/src/: cfg.rs  events.rs  lib.rs  log.rs  metrics.rs  prod.rs  queue.rs  real_code.rs  real_reg.rs  real_traf.rs  syn_code.rs  syn_reg.rs  syn_traf.rs
pipe/endpoint_store/: Cargo.toml
pipe/endpoint_store/src/: cfg.rs  cve_lookup.rs  error.rs  lib.rs  log.rs  metrics.rs  row.rs  schema.rs  store.rs
pipe/graph/: Cargo.toml
pipe/graph/src/: end_to_end.rs  error.rs  id.rs  ingest.rs  lib.rs  log.rs  metrics.rs  persist.rs  queries.rs  schema.rs  store.rs
pipe/model_loader/: Cargo.toml  README.md  requirements.txt
pipe/model_loader/src/: cfg.rs  error.rs  features.rs  inference.py  lib.rs  loader.rs  log.rs  metrics.rs  predictions.rs  python_helper.py  sequence.rs
pipe/savya_docs/: codebase.md  data_ingestion.md  graph.md  key.md  todo.md
pipe/scripts/: smoke.ps1
(+66 files in other folders)
