[package]
name = "data"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
axum = "0.7"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
regex = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
