[package]
name = "endpoint_store"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
data = { path = "../data" }
graph = { path = "../graph" }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
tempfile = "3"
