[package]
name = "graph"
version = "0.1.0"
edition = "2024"

[dependencies]
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
data = { path = "../data" }
petgraph = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"], default-features = false }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }
