[package]
name = "model_loader"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
chrono = "0.4"
pyo3 = { version = "0.22", features = ["auto-initialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "time"] }
tracing = "0.1"

[build-dependencies]
pyo3-build-config = "0.22"
